Filter classes by label in species info card, fixed some styling, added some comments for readability

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -79,6 +79,7 @@ body {
   margin: 0.2rem;
   vertical-align: middle;
   display: inline-block;
+  padding: 0 1.2rem;
 }
 
 .sort-select {
